Fix image width on mobile view
Fixes #1059

--- a/pages/src/src/style.less
+++ b/pages/src/src/style.less
@@ -183,6 +183,10 @@
 
   .contents {
     padding-top: 24px;
+
+    img {
+      max-width: 100%
+    }
   }
 
   .pageBody {
